tambah article dan aside

--- a/index.html
+++ b/index.html
@@ -64,41 +64,41 @@
         </section>
         <section id="shop" class="shop_container pt-xl pb-xl">
             <div class="shop-item_container">
-                <div class="shop-item">
+                <article class="shop-item">
                     <img loading="lazy" class="shop-image"
                         src="https://www.bukukita.com/babacms/displaybuku/116121_f.jpg" alt="foto produk">
                     <h3 class="shop-title">Nunchi: Seni Membaca Pikiran dan Perasaan Orang Lain</h3>
                     <p class="shop-writer">oleh: <span style="font-weight: bold;">Euny Hong</span></p>
                     <p class="shop-price">Rp.100.000</p>
-                </div>
-                <div class="shop-item">
+                </article>
+                <article class="shop-item">
                     <img loading="lazy" class="shop-image"
                         src="https://www.bukukita.com/babacms/displaybuku/118441_f.jpg" alt="foto produk">
                     <h3 class="shop-title">Sepi</h3>
                     <p class="shop-writer">oleh: <span style="font-weight: bold;">Pijar Psikologi</span></p>
                     <p class="shop-price">Rp.77.500</p>
-                </div>
-                <div class="shop-item">
+                </article>
+                <article class="shop-item">
                     <img loading="lazy" class="shop-image"
                         src="https://www.bukukita.com/babacms/displaybuku/88688_f.jpg" alt="foto produk">
                     <h3 class="shop-title">Kecerdasan Emosional</h3>
                     <p class="shop-writer">oleh: <span style="font-weight: bold;">Daniel Goleman</span></p>
                     <p class="shop-price">Rp.101.200</p>
-                </div>
-                <div class="shop-item">
+                </article>
+                <article class="shop-item">
                     <img loading="lazy" class="shop-image"
                         src="https://www.bukukita.com/babacms/displaybuku/118482_f.jpg" alt="foto produk">
                     <h3 class="shop-title">Buang Dari Pikiran Anda</h3>
                     <p class="shop-writer">oleh: <span style="font-weight: bold;">Jennie Allen</span></p>
                     <p class="shop-price">Rp.68.000</p>
-                </div>
-                <div class="shop-item">
+                </article>
+                <article class="shop-item">
                     <img loading="lazy" class="shop-image"
                         src="https://www.bukukita.com/babacms/displaybuku/118225_f.jpg" alt="foto produk">
                     <h3 class="shop-title">Kisah Para Nabi</h3>
                     <p class="shop-writer">oleh: <span style="font-weight: bold;">Ibnu Katsir</span></p>
                     <p class="shop-price">Rp.165.700</p>
-                </div>
+                </article>
             </div>
         </section>
     </main>
@@ -128,15 +128,15 @@
                 </ul>
             </div>
         </div>
-        <div class="column-author_container">
-            <img src="/assets/images/arif-budiman.png" alt="foto author">
+        <aside class="column-author_container">
+            <img loading="lazy" src="/assets/images/arif-budiman.png" alt="foto author">
             <h3>Arif Budiman</h3>
             <div class="social-media">
                 <a target="_blank" href="http://fb.me/xbangbudi"></a>
                 <a target="_blank" href="http://twitter.com/xbangbudi"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/ar1fbudiman/"></a>
             </div>
-        </div>
+        </aside>
     </footer>
 </body>
 <script src="/assets/js/main.js"></script>
