perbaikan widget author

--- a/index.html
+++ b/index.html
@@ -102,33 +102,11 @@
             </div>
         </section>
     </main>
-    <footer id="footer" class="footer_container pt-xl pb-xl">
-        <div class="url_container">
-            <div class="column_container">
-                <h3>Thanks to</h3>
-                <ul>
-                    <li><a target="_blank" href="https://www.bukukita.com/">BukuKita.com</a></li>
-                    <li><a target="_blank" href="https://unsplash.com/@alfonsmc10">Alfons Morales</a></li>
-                    <li><a
-                            href="https://id.pinterest.com/search/pins/?q=landing%20page%20website&rs=typed&term_meta[]=landing%7Ctyped&term_meta[]=page%7Ctyped&term_meta[]=website%7Ctyped">Pinterest</a>
-                    </li>
-                    <li><a target="_blank" href="https://dicoding.com/">Dicoding</a></li>
-                    <li><a target="_blank" href="https://www.youtube.com/c/WebProgrammingUNPAS">WebProgrammingUNPAS</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="column_container">
-                <h3>Menu</h3>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#shop">Shop</a>
-                    <li><a href="#footer">Contact</a>
-                    </li>
-                </ul>
-            </div>
+    <aside class="column-author_container">
+        <div class="floating-btn">
+            <h3>Author</h3>
         </div>
-        <aside class="column-author_container">
+        <div class="profile">
             <img loading="lazy" src="/assets/images/arif-budiman.png" alt="foto author">
             <h3>Arif Budiman</h3>
             <div class="social-media">
@@ -136,7 +114,32 @@
                 <a target="_blank" href="http://twitter.com/xbangbudi"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/ar1fbudiman/"></a>
             </div>
-        </aside>
+        </div>
+    </aside>
+    <footer id="footer" class="footer_container pt-xl pb-xl">
+        <div class="column_container">
+            <h3>Thanks to</h3>
+            <ul>
+                <li><a target="_blank" href="https://www.bukukita.com/">BukuKita.com</a></li>
+                <li><a target="_blank" href="https://unsplash.com/@alfonsmc10">Alfons Morales</a></li>
+                <li><a
+                        href="https://id.pinterest.com/search/pins/?q=landing%20page%20website&rs=typed&term_meta[]=landing%7Ctyped&term_meta[]=page%7Ctyped&term_meta[]=website%7Ctyped">Pinterest</a>
+                </li>
+                <li><a target="_blank" href="https://dicoding.com/">Dicoding</a></li>
+                <li><a target="_blank" href="https://www.youtube.com/c/WebProgrammingUNPAS">WebProgrammingUNPAS</a>
+                </li>
+            </ul>
+        </div>
+        <div class="column_container">
+            <h3>Menu</h3>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#shop">Shop</a>
+                <li><a href="#footer">Contact</a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 <script src="/assets/js/main.js"></script>
